Initialize ThemeServiceWin::inactive_frame_color_from_registry_

BUG=787073

Change-Id: I92233b5471ec36b73db004ec01eb6feb17401769
Reviewed-on: https://chromium-review.googlesource.com/780044
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518044}
Former-commit-id: c6b55fc32b3b0ee699a0e451f12fcc0c2278eff1